k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pikdame
  labels:
    app: pikdame
spec:
  selector:
    app: pikdame
  ports:
    - name: http
      port: 80
      targetPort: http
